# Boko-Hacks-2025

./: .env.example  .gitignore  app.py  pyproject.toml  vulnerabilities.md
models/: retirement_account.py  user.py
routes/: admin.py  files.py  news.py  notes.py  retirement.py
static/: styles.css
static/js/: admin.js  news.js  notes.js
templates/: news.html  notes.html
